--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "request": "^2.58.0",
-    "xml2js": "^0.4.9"
+    "xml2js": "^0.4.9",
+    "node-parse-url": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^2.2.5"
