--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-parse-url": "^1.0.0"
   },
   "devDependencies": {
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "chai": "^3.0.0"
   }
 }
