--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "internet-radio-info",
+  "name": "node-internet-radio",
   "version": "0.0.1",
-  "description": "Get \"Now Playing\" information from an internet radio stream url.",
+  "description": "Node.js module to get Now Playing information from an internet radio stream.",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
   "author": "Gabe Kangas",
+  "bugs": {
+    "url": "https://github.com/gabek/node-internet-radio/issues",
+    "email": "gabek@real-ity.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gabek/node-internet-radio.git"
+  },
   "license": "MIT",
   "dependencies": {
     "request": "^2.58.0",
