--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "request": "^2.58.0",
     "xml2js": "^0.4.9",
-    "node-parse-url": "^1.0.0"
+    "node-parse-url": "^1.0.0",
+    "async": "^1.3.0",
+    "lodash": "^3.10.0"
   },
   "devDependencies": {
     "mocha": "^2.2.5",
