--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "async": "^1.3.0",
     "cheerio": "^0.22.0",
     "request": "^2.58.0",
     "xml2js": "^0.4.9"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.0"
   }
 }
