Lib code rework, dependencies updates

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            "command": "npm test",
+            "name": "Run tests",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "type": "node-terminal",
         }
     ]
 }
