--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "url": "https://github.com/gabek/node-internet-radio.git"
   },
   "license": "MIT",
+  "type": "module",
   "dependencies": {
+    "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
-    "request": "^2.88.2",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
