--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,7 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [ 14.x, 16.x, 18.x ]
+        npm-flags: [ '--experimental-modules', '', '' ]
 
     steps:
     - uses: actions/checkout@v3
@@ -20,6 +21,6 @@ jobs:
       run: |
         npm install
         npm run build --if-present
-        npm test
+        npm ${{ matrix.npm-flags }} test
       env:
         CI: true
