--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,8 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 14.x, 16.x, 18.x ]
-        npm-flags: [ '--experimental-modules', '', '' ]
+        node-version: [ 16.x, 18.x ]
 
     steps:
     - uses: actions/checkout@v3
@@ -21,6 +20,6 @@ jobs:
       run: |
         npm install
         npm run build --if-present
-        npm ${{ matrix.npm-flags }} test
+        npm test
       env:
         CI: true
