--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "node-internet-radio",
   "version": "0.2.1",
   "description": "Node.js module to get Now Playing information from an internet radio stream.",
-  "main": "index.js",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "scripts": {
-    "test": "mocha --timeout 10000"
+    "test": "tsc -p tsconfig.dev.json && mocha --timeout 10000 --recursive './dist/test/**/*.js'",
+    "build": "tsc -p tsconfig.json"
   },
   "author": "Gabe Kangas",
   "bugs": {
@@ -23,14 +25,18 @@
     "url": "https://github.com/gabek/node-internet-radio.git"
   },
   "license": "MIT",
-  "type": "module",
   "dependencies": {
     "axios": "^1.3.4",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "18.15.5",
+    "@types/xml2js": "^0.4.11",
     "chai": "^4.3.7",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "typescript": "^5.0.2"
   },
   "engines": {
     "node": ">=16.x"
